# usonicApp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build-windows.yml
src/usonicapp/: config.py  constants.py  create_data.py  create_fixtures.py  database.py  main.py  models.py  plottab.py  requirements.txt  serialport.py  settings.toml  widgets.py
src/usonicapp/forms/: edit_record.ui  filter.ui  mainwindow.ui  settings.ui  table.ui
usonicapp/: calc_stat.py  config.py  constants.py  create_fixtures.py  database.py  db_transfer.py  models.py  plottab.py  requirements.txt  serialport.py  settings.toml  usonicapp.py  usonicapp.spec  utils.py  widgets.py
usonicapp/forms/: compare_mode.ui  edit_record.ui  filter.ui  group_edit_record.ui  mainwindow.ui  password.ui  settings.ui  table.ui  upload.ui
usonicapp/windows/: edit_record.py  filter.py  main.py  settings.py  table.py  upload.py
